[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
public_chain = { path = "../public_chain" }
private_chain = { path = "../private_chain" }
actix-web = "3"
actix-rt = "1"
serde = { version = "1", features = ["derive"] }
actix-files = "0.6" 
paperclip = { version = "0.5", features = ["actix"] }