[package]
name = "public_chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "public_chain"

[dependencies]
common = { path = "../common" }
secp256k1 = {version = "0.20", features = ["rand-std","rand"]}
rocksdb = "0.17"
actix-web = "3"
warp = "0.3"
chrono = "0.4"
reqwest = "0.11"
sha2 = "0.9.8"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns","noise"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.3"
tokio-tungstenite = "0.14"
hex = "0.4"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
tiny-keccak = { version = "2.0", features = ["keccak"] }
rand = "0.8.5"
borsh = "0.9"
ring = "0.16"
futures = "0.3"
blake2 = "0.8"
bytes = "0.4"
bincode = "1.3"
unsigned-varint = { version = "0.2.1", features = ["codec"] }
async-std = "1.8" 
anyhow = "1.0"
lazy_static = "1.4.0"
wasmtime = "13.0.0"
wasmtime-wasi = "13.0.0"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
