#![no_std]
[package]
name = "wasm_generator_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"

[[bin]]
name = "wasm_generator_rust"
path = "src/main.rs"

[lib]
name = "sample"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
