[package]
name = "wasm_generator_rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["erc20", "erc20_macro","add_derive_macro","erc20_wasm"]

[lib]
proc-macro = true

[dependencies]
erc20_macro = { path = "./erc20_macro" }
erc20 = {path="./erc20"}
syn = { version = "1", features = ["full"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
bincode = "1.3"
wasm-bindgen = "0.2"

[[bin]]
name = "wasm_generator_rust"
path = "src/main.rs"

